# drfrequests

./: LICENSE  MANIFEST.in  README.md  setup.cfg
rest_framework_requests/: api_docs.py  api_endpoint.py  urls.py  views.py
rest_framework_requests/static/: webpack.config.js
rest_framework_requests/templates/rest_framework_requests/: base.html  docs.html  home.html
rest_framework_requests/templates/rest_framework_requests/components/: fields_list.html
