[metadata]
name = drfrequests
version = 0.2
author = Suhail VS
author_email = suhailvs@gmail.com
description = Document Web APIs made with Django Rest Framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/suhailvs/drfrequests
project_urls =
    Bug Tracker = https://github.com/suhailvs/drfrequests/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false

